$Id: History,v 1.6 2000-11-24 10:36:58 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm1 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
24-11-00  Steve O'Neale (tagset210) (testem1-V02-00-01)
          Update test output Change in processes below ~ 5 per cent
          eIoni and hIoni  min.delta energy(keV) and energy cut table

13-11-00  G.Cosmo  (testem1-V02-00-00)
          Fixed memory leak in Em1RunAction: added call to clearAndDestroy()
	  in EndOfRunAction() to clean ProcCounter vector.

17-06-00  J.Allison  (testem1-V01-00-00)
          Updated TestEm1.out for geant4-01-01-ref-06.

21-01-00  cppflag G4NOHIST to protect hbook histograms.
          
11-10-99  moved from: source/processes/electromagnetic/test
          to: examples/extended/electromagnetic
     
09-08-99  Commands for save/read Rndm status 
      
17-06-99  added histogramming facility
     
10-05-99  user's actions adapted to geant4-00-ref-04
     
03-12-98  subdirectory geant3 which contains the geant3 equivalent
          example.
          
24.11.98  due to new computation of SetCut for electron, the cut in range
          for e-/+ has been modified in init.mac and run10.mac (beta03-00)
     
27.10.98  interactive command for setting StepFunction: deemax + stmin.
          modifs in setxxCut functions (Hisaya).
          Count occurence of processes.